[package]
name = "ksoft"
version = "1.0.0"
authors = ["Alvaro <alvaroms_25@hotmail.com>"]
edition = "2018"
description = "KSoft.SI api wrapper written in pure Rust"
documentation = ""
readme = "README.md"
repository = ""
license = "MPL-2.0"
keywords = ["KSoft", "ksoft", "async"]
categories = ["api-interactions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.8"
features = ["json"]