[package]
name = "ksoft"
version = "1.0.1"
authors = ["Alvaro <62391364+AlvaroMS25@users.noreply.github.com>"]
edition = "2018"
description = "KSoft.SI api wrapper written in pure Rust"
documentation = "https://alvaroms25.gitbook.io/ksoft-rs/"
readme = "README.md"
repository = "https://github.com/KSoft-Si/KSoft.rs"
license = "MPL-2.0"
keywords = ["KSoft", "ksoft", "async"]
categories = ["asynchronous", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.8"
features = ["json"]