[package]
name = "ksoft"
version = "1.1.0"
authors = ["Alvaro <62391364+AlvaroMS25@users.noreply.github.com>"]
edition = "2018"
description = "KSoft.SI api wrapper written in pure Rust"
documentation = "https://alvaroms25.gitbook.io/ksoft-rs/"
readme = "README.md"
repository = "https://github.com/KSoft-Si/KSoft.rs"
license = "MPL-2.0"
keywords = ["ksoft", "async"]
categories = ["asynchronous", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = ["reqwest/blocking"]
default = ["tokio", "async-trait", "tracing-futures"]
serenity = ["typemap_rev"]

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.0"
features = ["json"]

[dependencies.tokio]
version = "1.0.1"
features = ["rt", "sync", "time"]
optional = true

[dependencies.async-trait]
version = "0.1.42"
optional = true

[dependencies.tracing]
version = "0.1.22"

[dependencies.tracing-futures]
version = "0.2.4"
optional = true

[dependencies.typemap_rev]
version = "0.1.4"
optional = true