[package]
name = "asynchronous"
version = "0.1.0"
authors = ["AlvaroMS_25 <alvaro2ms5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ksoft]
path = "../../"

[dependencies.tokio]
version = "1.0"
features = ["macros"]