[package]
name = "asynchronous"
version = "0.1.0"
authors = ["Alvaro <62391364+AlvaroMS25@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ksoft]
path = "../../"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
